spade-tests/src/snapshots/spade_tests__ast_lowering__undeclared_errors_in_alias_not_usecase.snap
---
source: spade-tests/src/ast_lowering.rs
---
use aaaaaaa::thing;

entity t(clk: clock) -> bool {
    thing()
}


error: Use of undeclared name aaaaaaa
  ┌─ testinput:1:5
  │
1 │ use aaaaaaa::thing;
  │     ^^^^^^^ Undeclared name
